# aluci-ai-template

./: .gitignore  .pre-commit-config.yaml  AI_USAGE.md  README.md  pyproject.toml  setup.sh
docs/templates/: notebook_template.ipynb  settings_template.yaml
notebooks/: hf.ipynb  mlp.ipynb
src/: main.py
src/configs/: app_config.py  path_config.py
src/decorators/: error_handler.py
src/models/mlp/: mlp_config.yaml  mlp_model.py
src/models/smol_lm3/: smol_lm3_config.yaml  smol_lm3_model.py
src/schemas/: base_schema.py  log_schema.py  model_schema.py  path_schema.py
src/utils/: config_utils.py  file_utils.py  hf_utils.py  hydra_utils.py  log_utils.py  seed_utils.py  tensorboard_utils.py
tests/utils/: seed_test.py
